--- a/Zeratool player C Sharp/Zeratool player C Sharp.csproj
+++ b/Zeratool player C Sharp/Zeratool player C Sharp.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\z64.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DirectShowLib, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\DirectShowLib.Standard.2.1.0\lib\net45\DirectShowLib.dll</HintPath>
@@ -52,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="DirectShowUtils.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -59,12 +65,23 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="ZeratoolPlayerEngine.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ZeratoolPlayerGui.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ZeratoolPlayerGui.Designer.cs">
+      <DependentUpon>ZeratoolPlayerGui.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ZeratoolPlaylist.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +92,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ZeratoolPlayerGui.resx">
+      <DependentUpon>ZeratoolPlayerGui.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -89,8 +109,48 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Resources\" />
+    <None Include="Resources\play_inactive.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\tools.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\track_next.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\track_previous.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\z64.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\eject.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fullscreen.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fullscreen_exit.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\list.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\min_max.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pause_active.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pause_inactive.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\play_active.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
