Открытие плеера двойным щелчком по видеофайлу *Для этого видеофайлы должны быть вручную ассоциированы с плеером Исправлена иконка окна настроек

--- a/Zeratool player C Sharp/Zeratool player C Sharp.csproj
+++ b/Zeratool player C Sharp/Zeratool player C Sharp.csproj
@@ -97,6 +97,9 @@
     <EmbeddedResource Include="FormPlaylist.resx">
       <DependentUpon>FormPlaylist.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FormSettings.resx">
+      <DependentUpon>FormSettings.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
