--- a/Zeratool player C Sharp/Zeratool player C Sharp.csproj
+++ b/Zeratool player C Sharp/Zeratool player C Sharp.csproj
@@ -59,6 +59,7 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="DirectShowUtils.cs" />
+    <Compile Include="FiltersConfiguraion.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
