Продолжение воспроизведения трека с момента последней остановки

--- a/Zeratool player C Sharp/Zeratool player C Sharp.csproj
+++ b/Zeratool player C Sharp/Zeratool player C Sharp.csproj
@@ -61,6 +61,7 @@
     <Compile Include="FormBookmarks.Designer.cs">
       <DependentUpon>FormBookmarks.cs</DependentUpon>
     </Compile>
+    <Compile Include="Timestamps.cs" />
     <Compile Include="ZeratoolBookmarks.cs" />
     <Compile Include="CustomPanel.cs">
       <SubType>Component</SubType>
